# backend/service-go/app/service-main/api/main/v1/main_http.pb.go
@@ -1,6 +1,8 @@
 // Code generated by protoc-gen-go-http. DO NOT EDIT.
 // versions:
-// protoc-gen-go-http v2.2.0
+// - protoc-gen-go-http v2.5.3
+// - protoc             v3.21.12
+// source: api/main/v1/main.proto
 
 package v1
 
@@ -17,6 +19,10 @@ var _ = binding.EncodeURL
 
 const _ = http.SupportPackageIsVersion1
 
+const OperationMainGetAvailableNFTList = "/main.v1.Main/GetAvailableNFTList"
+const OperationMainGetLeaderboard = "/main.v1.Main/GetLeaderboard"
+const OperationMainPing = "/main.v1.Main/Ping"
+
 type MainHTTPServer interface {
 	GetAvailableNFTList(context.Context, *GetAvailableNFTListReq) (*GetAvailableNFTListResp, error)
 	GetLeaderboard(context.Context, *GetLeaderboardReq) (*GetLeaderboardResp, error)
@@ -25,9 +31,9 @@ type MainHTTPServer interface {
 
 func RegisterMainHTTPServer(s *http.Server, srv MainHTTPServer) {
 	r := s.Route("/")
-	r.GET("/service/main/v1/ping", _Main_Ping0_HTTP_Handler(srv))
-	r.GET("/service/main/v1/getLeaderboard", _Main_GetLeaderboard0_HTTP_Handler(srv))
-	r.GET("/service/main/v1/getAvailableNFTList", _Main_GetAvailableNFTList0_HTTP_Handler(srv))
+	r.GET("/toucan-leaderboard/service-main/v1/ping", _Main_Ping0_HTTP_Handler(srv))
+	r.GET("/toucan-leaderboard/service-main/v1/getLeaderboard", _Main_GetLeaderboard0_HTTP_Handler(srv))
+	r.GET("/toucan-leaderboard/service-main/v1/getAvailableNFTList", _Main_GetAvailableNFTList0_HTTP_Handler(srv))
 }
 
 func _Main_Ping0_HTTP_Handler(srv MainHTTPServer) func(ctx http.Context) error {
@@ -36,7 +42,7 @@ func _Main_Ping0_HTTP_Handler(srv MainHTTPServer) func(ctx http.Context) error {
 		if err := ctx.BindQuery(&in); err != nil {
 			return err
 		}
-		http.SetOperation(ctx, "/main.v1.Main/Ping")
+		http.SetOperation(ctx, OperationMainPing)
 		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
 			return srv.Ping(ctx, req.(*PingReq))
 		})
@@ -55,7 +61,7 @@ func _Main_GetLeaderboard0_HTTP_Handler(srv MainHTTPServer) func(ctx http.Contex
 		if err := ctx.BindQuery(&in); err != nil {
 			return err
 		}
-		http.SetOperation(ctx, "/main.v1.Main/GetLeaderboard")
+		http.SetOperation(ctx, OperationMainGetLeaderboard)
 		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
 			return srv.GetLeaderboard(ctx, req.(*GetLeaderboardReq))
 		})
@@ -74,7 +80,7 @@ func _Main_GetAvailableNFTList0_HTTP_Handler(srv MainHTTPServer) func(ctx http.C
 		if err := ctx.BindQuery(&in); err != nil {
 			return err
 		}
-		http.SetOperation(ctx, "/main.v1.Main/GetAvailableNFTList")
+		http.SetOperation(ctx, OperationMainGetAvailableNFTList)
 		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
 			return srv.GetAvailableNFTList(ctx, req.(*GetAvailableNFTListReq))
 		})
@@ -103,9 +109,9 @@ func NewMainHTTPClient(client *http.Client) MainHTTPClient {
 
 func (c *MainHTTPClientImpl) GetAvailableNFTList(ctx context.Context, in *GetAvailableNFTListReq, opts ...http.CallOption) (*GetAvailableNFTListResp, error) {
 	var out GetAvailableNFTListResp
-	pattern := "/service/main/v1/getAvailableNFTList"
+	pattern := "/toucan-leaderboard/service-main/v1/getAvailableNFTList"
 	path := binding.EncodeURL(pattern, in, true)
-	opts = append(opts, http.Operation("/main.v1.Main/GetAvailableNFTList"))
+	opts = append(opts, http.Operation(OperationMainGetAvailableNFTList))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
 	if err != nil {
@@ -116,9 +122,9 @@ func (c *MainHTTPClientImpl) GetAvailableNFTList(ctx context.Context, in *GetAva
 
 func (c *MainHTTPClientImpl) GetLeaderboard(ctx context.Context, in *GetLeaderboardReq, opts ...http.CallOption) (*GetLeaderboardResp, error) {
 	var out GetLeaderboardResp
-	pattern := "/service/main/v1/getLeaderboard"
+	pattern := "/toucan-leaderboard/service-main/v1/getLeaderboard"
 	path := binding.EncodeURL(pattern, in, true)
-	opts = append(opts, http.Operation("/main.v1.Main/GetLeaderboard"))
+	opts = append(opts, http.Operation(OperationMainGetLeaderboard))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
 	if err != nil {
@@ -129,9 +135,9 @@ func (c *MainHTTPClientImpl) GetLeaderboard(ctx context.Context, in *GetLeaderbo
 
 func (c *MainHTTPClientImpl) Ping(ctx context.Context, in *PingReq, opts ...http.CallOption) (*PingResp, error) {
 	var out PingResp
-	pattern := "/service/main/v1/ping"
+	pattern := "/toucan-leaderboard/service-main/v1/ping"
 	path := binding.EncodeURL(pattern, in, true)
-	opts = append(opts, http.Operation("/main.v1.Main/Ping"))
+	opts = append(opts, http.Operation(OperationMainPing))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
 	if err != nil {
