# backend/service-go/app/service-main/openapi.yaml
@@ -1,12 +1,12 @@
 # Generated with protoc-gen-openapi
-# https://github.com/google/gnostic/tree/master/apps/protoc-gen-openapi
+# https://github.com/google/gnostic/tree/master/cmd/protoc-gen-openapi
 
 openapi: 3.0.3
 info:
     title: Main API
     version: 0.0.1
 paths:
-    /service/main/v1/getAvailableNFTList:
+    /toucan-leaderboard/service-main/v1/getAvailableNFTList:
         get:
             tags:
                 - Main
@@ -23,7 +23,13 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/GetAvailableNFTListResp'
-    /service/main/v1/getLeaderboard:
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /toucan-leaderboard/service-main/v1/getLeaderboard:
         get:
             tags:
                 - Main
@@ -53,7 +59,13 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/GetLeaderboardResp'
-    /service/main/v1/ping:
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /toucan-leaderboard/service-main/v1/ping:
         get:
             tags:
                 - Main
@@ -70,6 +82,12 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/PingResp'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
 components:
     schemas:
         AvailableNFT:
@@ -106,6 +124,14 @@ components:
                         $ref: '#/components/schemas/LeaderboardItem'
                 type:
                     type: string
+        GoogleProtobufAny:
+            type: object
+            properties:
+                '@type':
+                    type: string
+                    description: The type of the serialized message.
+            additionalProperties: true
+            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
         LeaderboardItem:
             type: object
             properties:
@@ -126,5 +152,21 @@ components:
             properties:
                 res:
                     type: string
+        Status:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    description: The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
+                    format: int32
+                message:
+                    type: string
+                    description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
+                details:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/GoogleProtobufAny'
+                    description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
+            description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
 tags:
     - name: Main
